# exocross

./: .gitignore  .readthedocs.yaml  Algo916_module.f90  CMakeLists.txt  LICENSE.txt  README.md  VoigtKampff.f90  accuracy.f90  crosssections.f90  diatom.f90  functions.f90  input.f90  makefile  phoenix.f90  refinement.f90  spectrum.f90  timer.f90  voigt.c  voigt.h
VoigtKampff/: VoigtFortran.cpp  VoigtKampff.cpp  VoigtKampff.h  VoigtKampffCollection_module.f90  VoigtKampff_module.f90  profiles.cpp  profiles.h
docs/: index.md  mkdocs.yml
docs/docs/: about.md  index.md
exe/: j-xsec1701.x.bz2  j-xsec_1606.x.bz2  run_exocross.bat  xcross_linux.x
input/: 12C-16O__Li2015.states  12C-16O__lifetime.inp  12C-16O__t-lifetime.inp  14N-16O__NOname.states  14N-16O__air.broad  1H-12C-14N__H2.broad  1H-12C-14N__He.broad  23Na-1H_Rivlin.life  23Na-1H__Rivlin.states  23Na-1H__Rivlin.trans  40Ca-1H__Yadin.life  40Ca-1H__Yadin.states  40Ca-1H__Yadin.states.bz2  40Ca-1H__Yadin.trans  40Ca-1H__Yadin.trans.bz2  40Ca-1H__Yueqi.ino  CH4_2000K_Voigt-his_0-100.inp  CH4_Doppler_T1500K_0-1000.inp  CaH_lifetime.inp  CaH_stick_1e-25_298K.inp  H2O_1900K_bin.inp  H2O_296K_Phoenix.inp  H3p_T_20.inp  H3p_max_296_new.inp  HCN_HITRAN_296K_convert.inp  NO_1000K_Voigt_P10bar.inp  NO_1000K_bin.inp  NO_1000K_super-lines.inp  NO_1000K_super-lines_Voigt.inp  NO_296K_04.inp  NO_cooling_2000K.inp  NO_pf.inp  NO_to_HITRAN_296K.inp  NO_to_HITRAN_296K_simple.inp  NaH_Voigt-fast_298K.inp  NaH_Voigt-quad_298K.inp  NaH_abs_gauss_0.5.xsec  NaH_gauss_298K_0.5.inp  NaH_gauss_298K_0.5.out  NaH_stick_1e-25_298K.inp  (+6 more)
(+20 files in other folders)
